* Ticket #2218, Improve the Go To dialog:
    - use a masked edit for entering the timecode (hh:mm:ss.ms or mm:ss.ms depending on
      the file duration)
    - show an error message when the entered timecode is greater than the file duration
* Reduced the maximum number of packets in the Queue, except for AVI. This will
  reduce the amount of memory consumed by the player
* Improved the "Open directory" dialog: the checkbox will now use only one line
  when possible and the overall dialog will look better when using XP
* Avoid using negative option in the Tweaks page: change "Don't use 'search in folder'
  on commands 'Skip back/forward' when only one item in playlist" into "Open next/previous
  file in folder on 'Skip back/forward' when there is only one item in playlist".
* The minidump feature is now enabled by default. The crash dialog has been updated to
  redirect the users to the bug tracker
* Updated ffmpeg
* Updated MediaInfoLib to v0.7.57
* Updated ZenLib to v0.4.26
* Updated SoundTouch to v1.7.0pre r142
* Updated VirtualDub to v1.10.2-test7
* Updated zlib to v1.2.7
* Updated Detours to v3.0 build 316
* Updated French, Turkish, Czech, Russian, Ukrainian, simplified Chinese, Japanese,
  traditional Chinese, Italian, German and Polish translations
* Removed GTSdll support since it's dead
* Removed the option to disable XP theming since it's of no use for any OS >= Windows XP
* Removed the option "Use the WM ASF Reader for Windows Media files" since it has no
  effect on any "modern" OS (>= Windows XP)
* Removed SSF support
! Broken playback and picture on H.264 and MPEG-2 interlaced with DXVA on
  intergrated Intel adapter
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox
! Improve/Fix the "Open" dialog:
   - the "OK" button will be disabled until a file has been selected (this avoids
     an error when clicking on "OK" while no file was selected)