@@ -45,8 +45,10 @@ Legend:
     - show an error message when the entered timecode is greater than the file duration
 * Reduced the maximum number of packets in the Queue, except for AVI. This will
   reduce the amount of memory consumed by the player
-* Improved the "Open directory" dialog: the checkbox will now use only one line
-  when possible and the overall dialog will look better when using XP
+* Improved the "Open directory" dialog:
+    - when using XP the checkbox will now use only one line when possible and the overall
+      dialog will look better
+    - on Vista and later the dialog will use the new user interface
 * Avoid using negative option in the Tweaks page: change "Don't use 'search in folder'
   on commands 'Skip back/forward' when only one item in playlist" into "Open next/previous
   file in folder on 'Skip back/forward' when there is only one item in playlist".
